--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,5 @@
-@import '../base/variables';
-пге* {
+@import 'base/variables';
+* {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
 
@@ -9,3 +9,5 @@
 }
 
 @import 'blocks/promo';
+@import 'blocks/header';
+@import 'blocks/buttons';
