--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,3 @@
-@import 'base/variables';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -8,6 +7,8 @@
     margin: 0 auto;
 }
 
+@import 'base/variables';
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
+@import "base/media";
