--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,5 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
-@import "base/media";
+@import'blocks/benefits';
+@import 'base/media';
