--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,5 +11,8 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
-@import'blocks/benefits';
-@import 'base/media';
+@import 'blocks/benefits';
+@import 'blocks/title';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'base/media'
