--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -5,13 +5,6 @@
         &__icons {
             display: flex;
         }
-        &__header {
-            font-weight: 700;
-            font-size: 30px;
-            line-height: 30px;
-            color: #0D0D0D;
-            text-align: center;
-        }
         &__wrapper {
             margin: 60px 65px 0 0;
             min-width: 273px;
@@ -34,5 +27,10 @@
             color: #0D0D0D;
             text-align: center;
             width: 85%;
+            a {
+                text-decoration: underline;
+                color: $main-color;
+                font-size: 14px;
+            }
         }
     }
