--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -42,7 +42,7 @@
                     }
                     .slick-slide {
                         img {
-                            width: inherit;
+                            max-width: 100%;
                         }
                     }
                     .title {
@@ -96,6 +96,7 @@
                         &__logo {
                             img {
                                 margin: 0 auto;
+                                max-width: 100%;
                             }
                         }
                         &__phone {
