--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -59,6 +59,45 @@
                             margin: 20px auto;
                         }
                     }
+                    .slick-dots {
+                        padding-left: 0px;
+                        transform: translateX(-5px);
+                    }
+                    .catalog {
+                        &__tabs {
+                            margin-top: 20px;
+                            padding-left: 0px;
+                            flex-direction: column;
+                        }
+                        &__content {
+                            margin-top: 25px;
+                            flex-direction: column;
+                            align-items: center;
+                            &_active {
+                                justify-content: space-around;
+                            }
+                        }
+                        &__tab {
+                            margin-top: 5px;
+                        }
+                    }
+                    .reviews {
+                        &__item {
+                            flex-direction: column;
+                            text-align: center;
+                            align-items: center;
+                            padding: 0 30px;
+                        }
+                        &__text {
+                            margin-left: 0px;
+                        }
+                        &__descr {
+                            font-size: 12px;
+                        }
+                        .title {
+                            font-size: 26px;
+                        }
+                    }
                 }
                 
                 @media (max-width: 575px) {
