--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -7,6 +7,7 @@
     }
     .slick-prev,
     .slick-next {
+        border: none;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
